--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -24,12 +24,19 @@
       padding-left: 0;
       padding-right: 75px;
       list-style: none;
+      @include breakpoint(mobile){
+        margin-top: 30px;
+        padding-right: 25px;
+      }
       &:last-child {
         padding-right: 0;
       }
       li {
         text-align: left;
         padding-bottom: 15px;
+        @include breakpoint(mobile){
+          text-align: center;
+        }
         &:first-child {
           color: rgba(255,255,255,1);
           font-weight: 500;
