--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -1,4 +1,5 @@
 header.header {
+  transform: translateZ(0);
   padding-top: 40px;
   position: fixed;
   width: 100%;
@@ -17,6 +18,7 @@ header.header {
     }
     .navbar-brand {
       padding: 0;
+      height: 50px;
     }
   }
   @include breakpoint(mobile) {
@@ -30,35 +32,34 @@ header.header {
       }
     }
     .navbar-header {
-      padding: 20px 30px;
+      padding: 0px 30px;
       .navbar-toggle {
         @include breakpoint(mobile) {
           margin-top: 5px;
-
         }
         .icon-bar {
           @include transition-duration(0.3s);
           &:nth-child(1) {
-            -webkit-transform: rotate(45deg);
-            -moz-transform: rotate(45deg);
-            -ms-transform: rotate(45deg);
-            -o-transform: rotate(45deg);
-            transform: rotate(45deg);
+            -webkit-transform: rotate(45deg)translateZ(0);
+            -moz-transform: rotate(45deg)translateZ(0);
+            -ms-transform: rotate(45deg)translateZ(0);
+            -o-transform: rotate(45deg)translateZ(0);
+            transform: rotate(45deg)translateZ(0);
           }
           &:nth-child(2) {
-            -webkit-transform: rotate(45deg) translate3d(-6px, -4px, 0px);
-            -moz-transform: rotate(45deg) translate3d(-6px, -4px, 0px);
-            -ms-transform: rotate(45deg) translate3d(-6px, -4px, 0px);
-            -o-transform: rotate(45deg) translate3d(-6px, -4px, 0px);
-            transform: rotate(45deg) translate3d(-6px, -4px, 0px);
+            -webkit-transform: rotate(45deg) translate3d(-6px, -4px, 0px) translateZ(0);
+            -moz-transform: rotate(45deg) translate3d(-6px, -4px, 0px) translateZ(0);
+            -ms-transform: rotate(45deg) translate3d(-6px, -4px, 0px) translateZ(0);
+            -o-transform: rotate(45deg) translate3d(-6px, -4px, 0px)translateZ(0);
+            transform: rotate(45deg) translate3d(-6px, -4px, 0px)translateZ(0);
             opacity: 0;
           }
           &:nth-child(3) {
-            -webkit-transform: rotate(135deg) translate3d(-8px, 9px, 0px);
-            -moz-transform: rotate(135deg) translate3d(-8px, 9px, 0px);
-            -ms-transform: rotate(135deg) translate3d(-8px, 9px, 0px);
-            -o-transform: rotate(135deg) translate3d(-8px, 9px, 0px);
-            transform: rotate(135deg) translate3d(-8px, 9px, 0px);
+            -webkit-transform: rotate(135deg) translate3d(-8px, 9px, 0px)translateZ(0);
+            -moz-transform: rotate(135deg) translate3d(-8px, 9px, 0px)translateZ(0);
+            -ms-transform: rotate(135deg) translate3d(-8px, 9px, 0px)translateZ(0);
+            -o-transform: rotate(135deg) translate3d(-8px, 9px, 0px)translateZ(0);
+            transform: rotate(135deg) translate3d(-8px, 9px, 0px)translateZ(0);
           }
         }
         &.collapsed {
@@ -92,6 +93,7 @@ header.header {
     }
     .navbar-collapse {
       background: #545e6b;
+      height: 100%;
       .navbar-nav {
         li {
           padding: 0 0 30px 0;
