--- a/src/assets/styles/screens/_base.scss
+++ b/src/assets/styles/screens/_base.scss
@@ -135,6 +135,7 @@ h1, h2, h3, h4 {
   }
 }
 
+
 //slider
 .slider {
   margin-top: 200px;
@@ -143,13 +144,19 @@ h1, h2, h3, h4 {
   @include breakpoint(mobile){
     margin-top: 50px;
   }
+  @include breakpoint(tablet){
+    margin-top: 50px;
+  }
   //slider item
   &_item {
     background-position: left top;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 70%;
     padding-bottom: 155px;
     outline: none;
+    @include breakpoint(phablet){
+      background-size: 50%;
+    }
     @include breakpoint(mobile){
       padding-bottom: 60px;
     }
@@ -161,6 +168,9 @@ h1, h2, h3, h4 {
       opacity: 0;
       @include breakpoint(mobile) {
         margin-top: 150px;
+      }
+      @include breakpoint(tablet){
+        padding-top: 0;
       }
     }
     p {
@@ -309,6 +319,9 @@ h1, h2, h3, h4 {
       padding: 0 20px 30px 10px;
       font-size: 16px;
       font-weight: 300;
+      @include breakpoint(tablet){
+        font-size: 14px;
+      }
     }
     ul {
       list-style: none;
@@ -430,6 +443,12 @@ h1, h2, h3, h4 {
         opacity: 0.2;
         @include transition-duration(0.3s);
         @include breakpoint(mobile){
+          display: block;
+          width: 100%;
+          text-align: center;
+          margin-bottom: 20px;
+        }
+        @include breakpoint(tablet){
           display: block;
           width: 100%;
           text-align: center;
