--- a/src/assets/styles/screens/_base.scss
+++ b/src/assets/styles/screens/_base.scss
@@ -31,7 +31,6 @@
   font-style: normal;
 }
 
-
 body {
   font-family: 'Roboto';
   font-weight: 400;
@@ -40,6 +39,12 @@ body {
 
 h1, h2, h3, h4 {
   font-family: 'Roboto';
+}
+
+.container {
+  @include breakpoint(tablet){
+    width: 95%;
+  }
 }
 
 .container-fluid {
@@ -149,16 +154,32 @@ h1, h2, h3, h4 {
   }
   //slider item
   &_item {
-    background-position: left top;
-    background-repeat: no-repeat;
-    background-size: 70%;
     padding-bottom: 155px;
     outline: none;
-    @include breakpoint(phablet){
-      background-size: 50%;
+    position: relative;
+    @include breakpoint(laptop){
+      padding-top: 50px;
     }
     @include breakpoint(mobile){
-      padding-bottom: 60px;
+      padding-bottom: 80px;
+    }
+    img {
+      position: absolute;
+      height: 100%;
+      width: auto;
+      left:0;
+      top:0;
+      opacity: 0;
+      @include breakpoint(phablet){
+        height: 90%;
+      }
+      @include breakpoint(mobile){
+        padding-bottom: 60px;
+        height: 50%;
+      }
+      @include breakpoint(laptop){
+        margin-top: 50px;
+      }
     }
     h2 {
       padding-top: 95px;
@@ -167,10 +188,13 @@ h1, h2, h3, h4 {
       padding-bottom: 20px;
       opacity: 0;
       @include breakpoint(mobile) {
-        margin-top: 150px;
+        margin-top: 100px;
       }
       @include breakpoint(tablet){
         padding-top: 0;
+      }
+      @include breakpoint(laptop){
+        margin-top: 95px;
       }
     }
     p {
@@ -188,20 +212,25 @@ h1, h2, h3, h4 {
       opacity: 0;
     }
     &.slick-active {
+      img {
+        opacity: 1;
+        @include transition-duration(1s);
+        @include transition-delay(1.2s)
+      }
       h2 {
         opacity: 1;
         @include transition-duration(1s);
-        @include transition-delay(0.4s)
+        @include transition-delay(0.2s)
       }
       p {
         opacity: 1;
         @include transition-duration(1s);
-        @include transition-delay(0.8s)
+        @include transition-delay(0.4s)
       }
       a {
         opacity: 1;
         @include transition-duration(1s);
-        @include transition-delay(1.2s)
+        @include transition-delay(0.8s)
       }
     }
   }
@@ -274,14 +303,24 @@ h1, h2, h3, h4 {
   &__block {
     border-radius: 7px;
     overflow: hidden;
-    box-shadow: 2px 0px 2px rgba(0,0,0,0.2);
+    box-shadow: 2px 3px 5px rgba(0,0,0,0.1);
+    position: relative;
+    z-index: 2000;
+    background: #39add1;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    overflow: hidden;
     @include breakpoint(mobile){
-      box-shadow: none;
+      display: block;
     }
   }
+
   &__unit {
     background: #ffffff;
     padding: 30px;
+    border-right: none;
+    flex: 1;
     &:first-child {
       border-right: 1px solid #f4f4f4;
     }
@@ -333,8 +372,13 @@ h1, h2, h3, h4 {
          font-size: 14px;
          padding-bottom: 30px;
          font-weight: 400;
+         i {
+           color: #86d35d;
+           padding-right: 15px;
+         }
          &.disabled {
           color: #bfc7ce;
+           padding-left: 32px;
          }
        }
     }
@@ -392,6 +436,9 @@ h1, h2, h3, h4 {
   @include breakpoint(mobile){
     padding-top: 200px;
   }
+  @include breakpoint(tablet){
+    padding-bottom: 45px;
+  }
   header {
     text-align: center;
     h1 {
@@ -442,18 +489,28 @@ h1, h2, h3, h4 {
         float: left;
         opacity: 0.2;
         @include transition-duration(0.3s);
+
+        @include breakpoint(laptop){
+          width: auto;
+          margin-right: 35px;
+        }
+        @include breakpoint(tablet){
+          width: auto;
+          margin-right: 15px;
+        }
         @include breakpoint(mobile){
           display: block;
           width: 100%;
           text-align: center;
           margin-bottom: 20px;
         }
-        @include breakpoint(tablet){
+        @include breakpoint(phablet){
           display: block;
           width: 100%;
           text-align: center;
           margin-bottom: 20px;
         }
+
         &:last-child {
           margin-right: 0;
         }
