adjusting responsive displays & _variables.scss

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,1 +1,5 @@
-$heading-grey-color: #43484d;
+// main used color pallet
+$text-dark-grey: #43484d;
+$blue-link-color: #358ed7;
+$light-grey-color: #f4f4f4;
+$text-light-grey-color: #929faa;
