--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -7,18 +7,19 @@
 
 @mixin breakpoint($point) {
   @if $point == desktop {
-    @media (min-width: 70em) { @content ; }
+    @media (min-width: 1600px) { @content ; }
   }
   @else if $point == laptop {
-    @media (min-width: 64em) { @content ; }
+    @media (min-width: 1200px) { @content ; }
   }
   @else if $point == tablet {
-    @media (min-width: 50em) { @content ; }
+    @media (min-width: 767px) { @content ; }
   }
   @else if $point == phablet {
-    @media (min-width: 37.5em)  { @content ; }
+    @media (min-width: 761px)  { @content ; }
   }
   @else if $point == mobile {
-    @media (max-width: 50em)  { @content ; }
+    @media (max-width: 767px)  { @content ; }
   }
+
 }
