--- a/src/assets/styles/screens/_base.scss
+++ b/src/assets/styles/screens/_base.scss
@@ -1,32 +1,32 @@
 @font-face {
   font-family: 'Roboto';
-  src: url('./../../../assets/fonts/roboto_light/Roboto-Light-webfont.eot');
-  src: url('./../../../assets/fonts/roboto_light/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
-  url('./../../../assets/fonts/roboto_light/Roboto-Light-webfont.woff') format('woff'),
-  url('./../../../assets/fonts/roboto_light/Roboto-Light-webfont.ttf') format('truetype'),
-  url('./../../../assets/fonts/roboto_light/Roboto-Light-webfont.svg#robotothin') format('svg');
+  src: url('../fonts/roboto_light/Roboto-Light-webfont.eot');
+  src: url('../fonts/roboto_light/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/roboto_light/Roboto-Light-webfont.woff') format('woff'),
+  url('../fonts/roboto_light/Roboto-Light-webfont.ttf') format('truetype'),
+  url('../fonts/assets/fonts/roboto_light/Roboto-Light-webfont.svg#robotothin') format('svg');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('./../../../assets/fonts/roboto_regular/Roboto-Regular-webfont.eot');
-  src: url('./../../../assets/fonts/roboto_regular/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-  url('./../../../assets/fonts/roboto_regular/Roboto-Regular-webfont.woff') format('woff'),
-  url('./../../../assets/fonts/roboto_regular/Roboto-Regular-webfont.ttf') format('truetype'),
-  url('./../../../assets/fonts/roboto_regular/Roboto-Regular-webfont.svg#robotothin') format('svg');
+  src: url('../fonts/roboto_regular/Roboto-Regular-webfont.eot');
+  src: url('../fonts/roboto_regular/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/roboto_regular/Roboto-Regular-webfont.woff') format('woff'),
+  url('../fonts/roboto_regular/Roboto-Regular-webfont.ttf') format('truetype'),
+  url('../fonts/roboto_regular/Roboto-Regular-webfont.svg#robotothin') format('svg');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('./../../../assets/fonts/roboto_medium/Roboto-Medium-webfont.eot');
-  src: url('./../../../assets/roboto_medium/Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
-  url('./../../../assets/fonts/roboto_medium/Roboto-Medium-webfont.woff') format('woff'),
-  url('./../../../assets/fonts/roboto_medium/Roboto-Medium-webfont.ttf') format('truetype'),
-  url('./../../../assets/fonts/roboto_medium/Roboto-Medium-webfont.svg#robotothin') format('svg');
+  src: url('../fonts/roboto_medium/Roboto-Medium-webfont.eot');
+  src: url('../fonts/roboto_medium/Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/roboto_medium/Roboto-Medium-webfont.woff') format('woff'),
+  url('../fonts/roboto_medium/Roboto-Medium-webfont.ttf') format('truetype'),
+  url('../fonts/roboto_medium/Roboto-Medium-webfont.svg#robotothin') format('svg');
   font-weight: 500;
   font-style: normal;
 }
@@ -103,7 +103,7 @@ h1, h2, h3, h4 {
     }
   }
   &__img {
-    background: url("../../../assets/images/top-banner-img-bg.jpg");
+    background: url("../images/top-banner-img-bg.jpg");
     margin-top: 60px;
     height: 340px;
     border-radius: 12px;
