--- a/src/assets/styles/screens/_base.scss
+++ b/src/assets/styles/screens/_base.scss
@@ -214,6 +214,10 @@ h1, h2, h3, h4 {
       display: inline-block;
       margin-top: 25px;
       opacity: 0;
+      i {
+        font-size: 11px;
+        padding-left: 5px;
+      }
     }
     &.slick-active {
       img {
